# amber22_param

./: README.md
amber22/test/: CMakeLists.txt  Makefile  check_GAUSSIAN.x  check_Quick.x  check_mrcc.x  nightly_test  test_amber_clean.sh  test_amber_cuda_parallel.sh  test_amber_cuda_serial.sh  test_amber_mic2.sh  test_amber_mic_offload.sh  test_amber_parallel.sh  test_amber_serial.sh
amber22/test/2048_wat_gem/: EXCHANGE_GEM_SNK_SMITH  Run.2048_wat_MCbar_gem.pmemd.gem  Run.2048_wat_MCbar_gem.pmemd.gemstar  Run.2048_wat_nvt_gem.pmemd.gem  Run.2048_wat_nvt_gem.pmemd.gemstar  equil_216_wat.crd  inpcrd  just_atoms_list  mdout.2048_wat_MCbar_gem.pmemd.gem.save  mdout.2048_wat_MCbar_gem.pmemd.gemstar.save  mdout.2048_wat_nvt_gem.pmemd.gem.save  mdout.2048_wat_nvt_gem.pmemd.gemstar.save  prmtop  prmtop_GEMstar
amber22/test/4096wat/: Run.column_fft  Run.frcdmp  Run.pure_wat  Run.pure_wat_efield  Run.pure_wat_fswitch  Run.pure_wat_midpoint  Run.pure_wat_nmr_temp_reg  Run.shadow  Run.vrand  Run.vrand_long  mdfrc_cmp.save  mdout.pure_wat_efield.save  mdout.pure_wat_midpoint.save  mdout.pure_wat_nmr_temp.save  mdout.vrand.save
amber22/test/4096wat_oct/: Run.pure_wat_oct  mdout.pure_wat_oct.save
amber22/test/LES/: Run.PME_LES  md.LES.out.save
amber22/test/LES_CUT/: Run.LES  Run.noLES  md.LES.out.save
amber22/test/LES_GB/: Run.LES  les.gb1.diffcrd.out.save  les.gb1.samecrd.out.save  les.gb5.samecrd.out.save  les.gb7.rdt.out.save  les.gb7.samecrd.out.save
amber22/test/LES_TEMP/: 2temp.out.save  Run.2temp
amber22/test/LES_noPME/: Run.LESmd  Run.LESmd.rdiel  md.out.save  (+1 more)
(+5388 files in other folders)
